--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -10,11 +10,11 @@
 
     <TextView
         android:id="@+id/namePlayer"
-        android:layout_width="79dp"
-        android:layout_height="81dp"
-        android:layout_marginBottom="76dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/gameLandTextViewWidthHeight"
+        android:layout_height="@dimen/gameLandTextViewWidthHeight"
+        android:layout_marginBottom="@dimen/gameLandTextViewMarginBottom"
+        android:layout_marginEnd="@dimen/gameLandTextViewMarginEndStart"
+        android:layout_marginStart="@dimen/gameLandTextViewMarginEndStart"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,11 +23,11 @@
 
     <Button
         android:id="@+id/recylce"
-        android:layout_width="45dp"
-        android:layout_height="55dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/gameLandButtonRecycleWidth"
+        android:layout_height="@dimen/gameLandButtonRecycleHeight"
+        android:layout_marginBottom="@dimen/gameLandMarginBottomRecycle"
+        android:layout_marginEnd="@dimen/gameLandMarginEndRecycle"
+        android:layout_marginStart="@dimen/gameLandMarginStartRecycle"
         android:background="@drawable/recycle"
         android:onClick="onClickRecycle"
         android:text=""
@@ -38,11 +38,11 @@
 
     <Button
         android:id="@+id/nextTurn"
-        android:layout_width="145dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="252dp"
+        android:layout_width="@dimen/gameLandButtonWidth"
+        android:layout_height="@dimen/gameLandButtonHeight"
+        android:layout_marginBottom="@dimen/gameLandMarginBottomNextTurn"
+        android:layout_marginEnd="@dimen/gameLandMarginEndNextTurn"
+        android:layout_marginStart="@dimen/gameLandMarginStartNextTurn"
         android:background="@drawable/bot"
         android:onClick="onClickNextTurn"
         android:text = "@string/nextTurn"
@@ -53,11 +53,11 @@
 
     <Button
         android:id="@+id/startGame"
-        android:layout_width="145dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="68dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="252dp"
+        android:layout_width="@dimen/gameLandButtonWidth"
+        android:layout_height="@dimen/gameLandButtonHeight"
+        android:layout_marginBottom="@dimen/gameLandMarginBottomStartGame"
+        android:layout_marginEnd="@dimen/gameLandMarginEndStartGame"
+        android:layout_marginStart="@dimen/gameLandMarginStartStartGame"
         android:background="@drawable/bot"
         android:onClick="onClickStartGame"
         android:text = "@string/startGame"
@@ -68,11 +68,11 @@
 
     <Button
         android:id="@+id/newWord"
-        android:layout_width="145dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="120dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/gameLandButtonWidth"
+        android:layout_height="@dimen/gameLandButtonHeight"
+        android:layout_marginBottom="@dimen/gameLandMarginBottomNewWord"
+        android:layout_marginEnd="@dimen/gameLandMarginEndNewWord"
+        android:layout_marginStart="@dimen/gameLandMarginStartNewWord"
         android:background="@drawable/bot"
         android:onClick="onClickNewWord"
         android:text="@string/newWord"
