--- a/app/src/main/res/layout/activity_about_activity.xml
+++ b/app/src/main/res/layout/activity_about_activity.xml
@@ -11,10 +11,10 @@
         android:id="@+id/textbout"
         android:layout_width="225dp"
         android:layout_height="452dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/textEditMargin"
+        android:layout_marginEnd="@dimen/textEditMargin"
+        android:layout_marginStart="@dimen/textEditMargin"
+        android:layout_marginTop="@dimen/textEditMargin"
         android:text="@string/about"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
