--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,11 +9,11 @@
 
     <TextView
         android:id="@+id/namePlayer"
-        android:layout_width="79dp"
-        android:layout_height="81dp"
-        android:layout_marginBottom="144dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/gamePortraitTextViewWidthHeight"
+        android:layout_height="@dimen/gamePortraitTextViewWidthHeight"
+        android:layout_marginBottom="@dimen/gamePortraitMarginBottom"
+        android:layout_marginEnd="@dimen/gamePortraitMarginEndStart"
+        android:layout_marginStart="@dimen/gamePortraitMarginEndStart"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,11 +22,11 @@
 
     <Button
         android:id="@+id/nextTurn"
-        android:layout_width="145dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="188dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="252dp"
+        android:layout_width="@dimen/gamePortraitButtonWidth"
+        android:layout_height="@dimen/gamePortraitButtonHeight"
+        android:layout_marginBottom="@dimen/gamePortraitMarginBottomNextTurn"
+        android:layout_marginEnd="@dimen/gamePortraitMarginEndNextTurn"
+        android:layout_marginStart="@dimen/gamePortraitMarginStartNextTurn"
         android:background="@drawable/bot"
         android:text = "@string/nextTurn"
         android:onClick="onClickNextTurn"
@@ -37,11 +37,11 @@
 
     <Button
         android:id="@+id/startGame"
-        android:layout_width="145dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="84dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="252dp"
+        android:layout_width="@dimen/gamePortraitButtonWidth"
+        android:layout_height="@dimen/gamePortraitButtonHeight"
+        android:layout_marginBottom="@dimen/gamePortraitMarginBottomStartGame"
+        android:layout_marginEnd="@dimen/gamePortraitMarginEndStartGame"
+        android:layout_marginStart="@dimen/gamePortraitMarginStartStartGame"
         android:background="@drawable/bot"
         android:onClick="onClickStartGame"
         android:text="@string/startGame"
@@ -52,11 +52,11 @@
 
     <Button
         android:id="@+id/newWord"
-        android:layout_width="145dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="124dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/gamePortraitButtonWidth"
+        android:layout_height="@dimen/gamePortraitButtonHeight"
+        android:layout_marginBottom="@dimen/gamePortraitMarginBottomNewWord"
+        android:layout_marginEnd="@dimen/gamePortraitMarginEndNewWord"
+        android:layout_marginStart="@dimen/gamePortraitMarginStartNewWord"
         android:background="@drawable/bot"
         android:text="@string/newWord"
         android:onClick="onClickNewWord"
@@ -67,11 +67,11 @@
 
     <Button
         android:id="@+id/recylce"
-        android:layout_width="45dp"
-        android:layout_height="55dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="@dimen/gamePortraitButtonRecycleWidth"
+        android:layout_height="@dimen/gamePortraitButtonRecycleHeight"
+        android:layout_marginBottom="@dimen/gamePortraitMarginBottomRecycle"
+        android:layout_marginEnd="@dimen/gamePortraitMarginEndRecycle"
+        android:layout_marginStart="@dimen/gamePortraitMarginStartRecycle"
         android:background="@drawable/recycle"
         android:onClick="onClickRecycle"
         android:text=""
