--- a/app/src/main/res/layout/activity_game_start.xml
+++ b/app/src/main/res/layout/activity_game_start.xml
@@ -9,12 +9,12 @@
 
     <Button
         android:id="@+id/startGame"
-        android:layout_width="145dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/gameStartButtonWidthStartGame"
+        android:layout_height="@dimen/gameStartButtonHeightStartGame"
+        android:layout_marginBottom="@dimen/gameStartMarginStartGame"
+        android:layout_marginEnd="@dimen/gameStartMarginStartGame"
+        android:layout_marginStart="@dimen/gameStartMarginStartGame"
+        android:layout_marginTop="@dimen/gameStartMarginStartGame"
         android:background="@drawable/bot"
         android:onClick="onClickStartGame"
         android:text="@string/startGame"
@@ -29,9 +29,9 @@
         android:id="@+id/firstPlayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="160dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="@dimen/textEditMarginBottomFirst"
+        android:layout_marginEnd="@dimen/textEditMargin"
+        android:layout_marginStart="@dimen/textEditMargin"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
@@ -44,9 +44,9 @@
         android:id="@+id/secondPlayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="@dimen/textEditMarginBottomSecond"
+        android:layout_marginEnd="@dimen/textEditMargin"
+        android:layout_marginStart="@dimen/textEditMargin"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
