--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,59 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="gamePortraitTextViewWidthHeight">80dp</dimen>
+    <dimen name="gamePortraitMarginBottom">144dp</dimen>
+    <dimen name="gamePortraitMarginEndStart">8dp</dimen>
+    <dimen name="gamePortraitButtonWidth">145dp</dimen>
+    <dimen name="gamePortraitButtonHeight">40dp</dimen>
+    <dimen name="gamePortraitButtonRecycleWidth">45dp</dimen>
+    <dimen name="gamePortraitButtonRecycleHeight">55dp</dimen>
+    <dimen name="gamePortraitMarginBottomNextTurn">188dp</dimen>
+    <dimen name="gamePortraitMarginEndNextTurn">8dp</dimen>
+    <dimen name="gamePortraitMarginStartNextTurn">252dp</dimen>
+    <dimen name="gamePortraitMarginBottomNewWord">124dp</dimen>
+    <dimen name="gamePortraitMarginEndNewWord">8dp</dimen>
+    <dimen name="gamePortraitMarginStartNewWord">8dp</dimen>
+    <dimen name="gamePortraitMarginBottomStartGame">84dp</dimen>
+    <dimen name="gamePortraitMarginEndStartGame">8dp</dimen>
+    <dimen name="gamePortraitMarginStartStartGame">252dp</dimen>
+    <dimen name="gamePortraitMarginBottomRecycle">8dp</dimen>
+    <dimen name="gamePortraitMarginEndRecycle">8dp</dimen>
+    <dimen name="gamePortraitMarginStartRecycle">8dp</dimen>
+    <dimen name="gameLandTextViewWidthHeight">80dp</dimen>
+    <dimen name="gameLandTextViewMarginBottom">76dp</dimen>
+    <dimen name="gameLandTextViewMarginEndStart">8dp</dimen>
+    <dimen name="gameLandMarginBottom">144dp</dimen>
+    <dimen name="gameLandMarginEndStart">8dp</dimen>
+    <dimen name="gameLandButtonWidth">145dp</dimen>
+    <dimen name="gameLandButtonHeight">40dp</dimen>
+    <dimen name="gameLandButtonRecycleWidth">45dp</dimen>
+    <dimen name="gameLandButtonRecycleHeight">55dp</dimen>
+    <dimen name="gameLandMarginBottomNextTurn">16dp</dimen>
+    <dimen name="gameLandMarginEndNextTurn">8dp</dimen>
+    <dimen name="gameLandMarginStartNextTurn">252dp</dimen>
+    <dimen name="gameLandMarginBottomNewWord">120dp</dimen>
+    <dimen name="gameLandMarginEndNewWord">8dp</dimen>
+    <dimen name="gameLandMarginStartNewWord">8dp</dimen>
+    <dimen name="gameLandMarginBottomStartGame">68dp</dimen>
+    <dimen name="gameLandMarginEndStartGame">8dp</dimen>
+    <dimen name="gameLandMarginStartStartGame">252dp</dimen>
+    <dimen name="gameLandMarginBottomRecycle">16dp</dimen>
+    <dimen name="gameLandMarginEndRecycle">8dp</dimen>
+    <dimen name="gameLandMarginStartRecycle">8dp</dimen>
+    <dimen name="mButtonWidth">150dp</dimen>
+    <dimen name="mButtonHeight">55dp</dimen>
+    <dimen name="mMarginStart">8dp</dimen>
+    <dimen name="mMarginEnd">8dp</dimen>
+    <dimen name="mMarginTop">8dp</dimen>
+    <dimen name="mMarginBottom">8dp</dimen>
+    <dimen name="mLandMarginStart">8dp</dimen>
+    <dimen name="mLandMarginEnd">8dp</dimen>
+    <dimen name="mLandMarginTop">240dp</dimen>
+    <dimen name="mLandMarginBottom">8dp</dimen>
+    <dimen name="textEditMargin">8dp</dimen>
+    <dimen name="gameStartButtonWidthStartGame">150dp</dimen>
+    <dimen name="gameStartButtonHeightStartGame">55dp</dimen>
+    <dimen name="gameStartMarginStartGame">8dp</dimen>
+    <dimen name="textEditMarginBottomSecond">80dp</dimen>
+    <dimen name="textEditMarginBottomFirst">160dp</dimen>
 </resources>
