--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,48 +6,47 @@
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:gravity="center"
+    android:layout_marginBottom="200dp">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:text="FORUM"
+        android:layout_height="wrap_content"
+        android:text="@string/login_title"
         android:gravity="center"
-        android:textSize="80sp"
-        android:textColor="@color/design_default_color_primary"/>
+        android:textSize="60sp"
+        android:textColor="@color/design_default_color_primary"
+        android:layout_marginBottom="50dp"/>
 
     <LinearLayout
         android:id="@+id/login_layout_for_edit_texts"
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_gravity="center_horizontal">
         <EditText
-            android:id="@+id/login_email"
+            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/prompt_email"
+            android:hint="@string/hint_login"
             android:inputType="text"
             android:maxLines="1"
             android:singleLine="true" />
         <EditText
-            android:id="@+id/login_password"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/prompt_password"
-            android:imeActionId="6"
-            android:imeActionLabel="@string/action_sign_in_short"
-            android:imeOptions="actionUnspecified"
+            android:hint="@string/hint_password"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:singleLine="true" />
+            android:singleLine="true"/>
         <Button
             android:id="@+id/login_sign_in"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/action_sign_in"
-            android:textStyle="bold" />
+            android:layout_gravity="center_horizontal"
+            android:text="@string/button_sign_in"/>
     </LinearLayout>
 </LinearLayout>
