--- a/app/src/main/res/layout/main_nav_manu_header.xml
+++ b/app/src/main/res/layout/main_nav_manu_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="180dp"
     android:background="@drawable/ic_launcher_background"
     android:backgroundTint="@color/colorAccent"
     android:gravity="bottom"
@@ -12,11 +12,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <ImageView
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:src="@drawable/avatar"/>
+
     <TextView
         android:id="@+id/main_nav_menu_header_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Логин"
+        android:hint="@string/hint_user_name"
+
         android:textSize="24sp" />
 
 </LinearLayout>
