--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/main_menu_add"
-        android:title="Добавить"
+        android:title="@string/menu_button_add"
         android:actionLayout="@layout/activity_main"
         app:showAsAction="ifRoom"/>
 </menu>
