--- a/app/src/main/res/menu/theme_menu.xml
+++ b/app/src/main/res/menu/theme_menu.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/theme_menu_answer"
-        android:title="Ответить"
+        android:title="@string/menu_button_reply"
         app:showAsAction="ifRoom"/>
 </menu>
