--- a/app/src/main/res/layout/activity_game_field.xml
+++ b/app/src/main/res/layout/activity_game_field.xml
@@ -14,21 +14,19 @@
         android:layout_height="wrap_content"
         android:background="@color/colorTopBar">
 
-<!--
-        <TextView
-            android:id="@+id/health"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:fontFamily="@font/muller_bold"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+        <ImageButton
+            android:id="@+id/pause_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/pause_button"
+            android:contentDescription="@string/health_bar"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
--->
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/health_bar"
@@ -37,7 +35,8 @@
             android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/pause_button"
+            android:contentDescription="@string/health_bar" />
 
         <TextView
             android:id="@+id/score"
@@ -60,6 +59,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBackground">
+
+        <ImageView
+            android:id="@+id/pizza"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/pizza"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
