--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/lin_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/background"
+        android:layout_centerInParent="true"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical">
 
@@ -20,7 +20,7 @@
         </Button>
 
         <Button
-            android:id="@+id/recordds"
+            android:id="@+id/recordsBtn"
             style="@style/menuButton"
             android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
@@ -33,8 +33,8 @@
             android:id="@+id/exit"
             style="@style/menuButton"
             android:layout_width="@dimen/button_width"
-            android:layout_marginTop="@dimen/btw_buttons"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/btw_buttons"
             android:onClick="onClickExit"
             android:text="@string/exit">
         </Button>
