--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -5,7 +5,8 @@
 
     <EditText
         android:id="@+id/edit_text"
-        android:layout_width="wrap_content"
+        android:inputType="textPersonName"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
     </EditText>
 
