--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -5,5 +5,6 @@
     <dimen name="start_item">100dp</dimen>
     <dimen name="size_text">16sp</dimen>
     <dimen name="button_width_large">350dp</dimen>
+    <dimen name="start_size">100dp</dimen>
     <dimen name="exit_status">1</dimen>
 </resources>
