--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -1,145 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     tools:context=".LeaderBoardActivity"
-    android:stretchColumns="*">
+    android:orientation="vertical">
 
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TableRow
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            app:tabMode="fixed"
+            app:tabTextColor="@color/white">
+        </android.support.design.widget.TabLayout>
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
+    </android.support.design.widget.AppBarLayout>
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp"
-                android:layout_marginStart="30dp"
-                />
-        </TableRow>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp"
-                android:layout_marginStart="30dp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp"
-                android:layout_marginStart="30dp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp"
-                android:layout_marginStart="30dp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/muller_medium"
-                android:textColor="@color/white"
-                android:textSize="28sp"
-                android:layout_marginStart="30dp"
-                />
-        </TableRow>
-    </TableLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
