--- a/GettingThingsDone/app/src/main/res/layout-v26/note_fragment.xml
+++ b/GettingThingsDone/app/src/main/res/layout-v26/note_fragment.xml
@@ -3,7 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+>
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -58,15 +59,17 @@
 
     <EditText
             android:id="@+id/note_edit_text"
-            android:focusedByDefault="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="10000"
+            android:textSize="17sp"
+            android:textCursorDrawable="@null"
+            android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
+            android:hint="Write a note"
             android:layout_margin="12dp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="17sp"
-            android:maxLength="10000"
     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
