--- a/GettingThingsDone/app/src/main/res/layout/create_folder_dialog.xml
+++ b/GettingThingsDone/app/src/main/res/layout/create_folder_dialog.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
+            android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintTop_toBottomOf="@id/folder_name_et"
             app:layout_constraintEnd_toStartOf="@id/dialog_positive_btn"
@@ -36,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ok"
+            android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/folder_name_et"
