--- a/GettingThingsDone/app/src/main/res/layout/custom_cancel_dialog.xml
+++ b/GettingThingsDone/app/src/main/res/layout/custom_cancel_dialog.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="17sp"
-            android:text="БЛАБАЛБАЛ"
+            android:text="Click OK to discard changes"
             android:textCursorDrawable="@null"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
+            android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintTop_toBottomOf="@id/folder_name_et"
             app:layout_constraintEnd_toStartOf="@id/dialog_positive_btn"
@@ -36,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ok"
+            android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/folder_name_et"
