--- a/GettingThingsDone/app/src/main/res/layout/note_fragment.xml
+++ b/GettingThingsDone/app/src/main/res/layout/note_fragment.xml
@@ -61,12 +61,15 @@
             android:id="@+id/note_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="10000"
+            android:textSize="17sp"
+            android:textCursorDrawable="@null"
+            android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
+            android:hint="Write a note"
             android:layout_margin="12dp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
-            android:textSize="17sp"
-            android:maxLength="10000"
     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
