--- a/app/src/main/res/layout/activiry_instruction.xml
+++ b/app/src/main/res/layout/activiry_instruction.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 
     <TextView
-            android:text='@string/insturcion'
+            android:text='@string/instruction'
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
