--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".activities.MainActivity">
     <Button
             android:text="@string/start_game_8"
             android:layout_width="0dp"
@@ -40,5 +40,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/start_game_10" android:layout_marginBottom="60dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.04000002"/>
+    <Button
+            android:text="@string/button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/start_custom"
+            app:layout_constraintTop_toBottomOf="@+id/resume"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.04"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
