Внесены изменения. Представлены некоторые тесты. Добавлены альтернативные ресурсы, логирование, исправлена работа кнопок.

--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -118,37 +118,43 @@ tools:context=".GameActivity">
 
 
 <ScrollView
+    android:id="@+id/scrollView2"
     android:layout_width="0dp"
     android:layout_height="0dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginBottom="8dp"
     android:scrollbarAlwaysDrawVerticalTrack="true"
     android:scrollbars="vertical"
-    app:layout_constraintBottom_toTopOf="@+id/ok"
+    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="1.0"
-    app:layout_constraintStart_toEndOf="@+id/textView"
-    app:layout_constraintTop_toTopOf="parent" >
+    app:layout_constraintStart_toEndOf="@+id/del"
+    app:layout_constraintTop_toTopOf="parent">
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:textSize="20sp"
         android:text=""
+        android:textSize="20sp"
         android:textStyle="bold" />
 </ScrollView>
-
 
 <TextView
     android:id="@+id/textView3"
     android:layout_width="107dp"
     android:layout_height="38dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginRight="8dp"
     android:text=""
     android:textSize="30sp"
     android:textStyle="bold"
+    app:layout_constraintEnd_toStartOf="@+id/scrollView2"
     app:layout_constraintTop_toTopOf="parent"
-    tools:ignore="MissingConstraints"
-    tools:layout_editor_absoluteX="0dp" />
+    tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
