Object SaveFragment переименован в SaveLastFragmentSorReCreate для лучшей читаемости (объект не является наследником Fragment). Добавлены синтетические классы везде, где они не были использованы. Методы nextFragment и nextActivity сделаны 'extension function' и вынесены в новый object Utils.kt.

--- a/app/src/main/res/layout-land/game_fragment.xml
+++ b/app/src/main/res/layout-land/game_fragment.xml
@@ -12,7 +12,7 @@
             android:text="@string/turn_player"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"/>
+            android:id="@+id/current_player_text_view"/>
 
     <LinearLayout
             android:id="@+id/main_liner"
