--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="CheckersBoard">
-        <attr name="start_line" format="float"/>
+        <attr name="start_line" format="integer"/>
         <attr name="field_size" format="integer"/>
     </declare-styleable>
 </resources>
