--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,19 @@
             android:text="@string/button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/start_custom"
+            android:id="@+id/start_fragment"
             app:layout_constraintTop_toBottomOf="@+id/resume"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.04"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+    />
+
+    <Button
+            android:text="@string/create_custom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/create_custom"
+            app:layout_constraintTop_toBottomOf="@+id/start_fragment"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.04"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
