--- a/GettingThingsDone/app/src/main/res/layout/main_fragment.xml
+++ b/GettingThingsDone/app/src/main/res/layout/main_fragment.xml
@@ -17,6 +17,7 @@
                 android:layout_height="match_parent">
 
             <TextView
+                    android:id="@+id/toolbar_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
