--- a/GettingThingsDone/app/src/main/res/layout/custom_cancel_dialog.xml
+++ b/GettingThingsDone/app/src/main/res/layout/custom_cancel_dialog.xml
@@ -11,10 +11,11 @@
 >
     <TextView
             android:id="@+id/alarm"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="17sp"
-            android:text="Click OK to discard changes"
+            android:padding="12dp"
+            android:text="Click OK to cancel changes"
             android:textCursorDrawable="@null"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
@@ -28,8 +29,8 @@
             android:text="Cancel"
             android:textColor="@android:color/black"
             android:background="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/folder_name_et"
-            app:layout_constraintEnd_toStartOf="@id/dialog_positive_btn"
+            app:layout_constraintEnd_toStartOf="@id/dialog_pos_btn"
+            app:layout_constraintTop_toBottomOf="@id/alarm"
             style="?android:attr/borderlessButtonStyle"
     />
     <Button
@@ -40,7 +41,7 @@
             android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/folder_name_et"
+            app:layout_constraintTop_toBottomOf="@id/alarm"
             style="?android:attr/borderlessButtonStyle"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
