--- a/GettingThingsDone/app/src/main/res/menu/popup_menu.xml
+++ b/GettingThingsDone/app/src/main/res/menu/popup_menu.xml
@@ -2,10 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/menu_rename"
+          android:visible="false"
           android:title="Rename"/>
-
-    <item android:id="@+id/menu_copy"
-          android:title="Copy"/>
 
     <item android:id="@+id/menu_move"
           android:title="Move"/>
