--- a/GettingThingsDone/app/src/main/res/layout-v26/create_folder_dialog.xml
+++ b/GettingThingsDone/app/src/main/res/layout-v26/create_folder_dialog.xml
@@ -9,40 +9,39 @@
         android:padding="12dp"
         tools:context=".MainActivity"
 >
-    <TextView
-            android:id="@+id/alarm"
-            android:layout_width="wrap_content"
+    <EditText
+            android:id="@+id/folder_name_et"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/input_name_folder"
             android:textSize="17sp"
-            android:padding="12dp"
-            android:text="@string/click_ok_to_cancel_changes"
+            android:maxLength="30"
             android:textCursorDrawable="@null"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-    />
+            android:importantForAutofill="no" android:inputType="text"/>
     <Button
-            android:id="@+id/dialog_neg_btn"
+            android:id="@+id/dialog_negative_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel"
             android:textColor="@android:color/black"
             android:background="@android:color/white"
-            app:layout_constraintEnd_toStartOf="@id/dialog_pos_btn"
-            app:layout_constraintTop_toBottomOf="@id/alarm"
+            app:layout_constraintTop_toBottomOf="@id/folder_name_et"
+            app:layout_constraintEnd_toStartOf="@id/dialog_positive_btn"
             style="?android:attr/borderlessButtonStyle"
     />
     <Button
-            android:id="@+id/dialog_pos_btn"
+            android:id="@+id/dialog_positive_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ok"
             android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/alarm"
+            app:layout_constraintTop_toBottomOf="@id/folder_name_et"
             style="?android:attr/borderlessButtonStyle"
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
