--- a/GettingThingsDone/app/src/main/res/layout-v26/note_fragment.xml
+++ b/GettingThingsDone/app/src/main/res/layout-v26/note_fragment.xml
@@ -3,14 +3,17 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
 >
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            app:contentInsetStart="0dp">
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -21,7 +24,11 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:padding="12dp"
-                    android:src="@drawable/ic_arrow_back_black"/>
+                    android:src="@drawable/ic_arrow_back_black"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:contentDescription="@string/back_button"/>
 
             <TextView
                     android:id="@+id/note_text"
@@ -29,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="19sp"
                     android:textColor="@android:color/black"
-                    android:text="Note"
+                    android:text="@string/note"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +51,9 @@
                     android:src="@drawable/ic_done_black"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/save_note_button"
             />
 
             <View
@@ -66,10 +76,13 @@
             android:textCursorDrawable="@null"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
-            android:hint="Write a note"
+            android:hint="@string/write_a_note"
             android:layout_margin="12dp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
+            android:inputType="text"
+            android:importantForAutofill="no"
+            tools:targetApi="o"
     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
