--- a/GettingThingsDone/app/src/main/res/layout/create_folder_dialog.xml
+++ b/GettingThingsDone/app/src/main/res/layout/create_folder_dialog.xml
@@ -13,7 +13,7 @@
             android:id="@+id/folder_name_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Input name folder"
+            android:hint="@string/input_name_folder"
             android:textSize="17sp"
             android:maxLength="30"
             android:textCursorDrawable="@null"
@@ -21,12 +21,12 @@
             android:backgroundTint="@android:color/transparent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-    />
+            android:importantForAutofill="no" android:inputType="text" tools:targetApi="o"/>
     <Button
             android:id="@+id/dialog_negative_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintTop_toBottomOf="@id/folder_name_et"
@@ -37,7 +37,7 @@
             android:id="@+id/dialog_positive_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ok"
+            android:text="@string/ok"
             android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
