--- a/GettingThingsDone/app/src/main/res/layout/custom_cancel_dialog.xml
+++ b/GettingThingsDone/app/src/main/res/layout/custom_cancel_dialog.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:textSize="17sp"
             android:padding="12dp"
-            android:text="Click OK to cancel changes"
+            android:text="@string/click_ok_to_cancel_changes"
             android:textCursorDrawable="@null"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
@@ -26,7 +26,7 @@
             android:id="@+id/dialog_neg_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintEnd_toStartOf="@id/dialog_pos_btn"
@@ -37,7 +37,7 @@
             android:id="@+id/dialog_pos_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ok"
+            android:text="@string/ok"
             android:textColor="@android:color/black"
             android:background="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
