--- a/GettingThingsDone/app/src/main/res/layout/custom_card_view.xml
+++ b/GettingThingsDone/app/src/main/res/layout/custom_card_view.xml
@@ -20,14 +20,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-        />
+                android:contentDescription="@string/image_folder"/>
 
         <TextView
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="17sp"
-                android:text="#НАЗВАНИЕ_ПАПКИ_1"
                 android:layout_marginStart="8dp"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toEndOf="@id/ic_folder"
