--- a/GettingThingsDone/app/src/main/res/layout/main_fragment.xml
+++ b/GettingThingsDone/app/src/main/res/layout/main_fragment.xml
@@ -10,11 +10,26 @@
             android:id="@+id/toolbar"
             app:contentInsetStart="0dp"
             android:layout_width="match_parent"
-            android:layout_height="48dp">
+            android:layout_height="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+            <ImageView
+                    android:id="@+id/ic_arrow_back"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:padding="12dp"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_arrow_back_black"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:contentDescription="@string/back_button"/>
 
             <TextView
                     android:id="@+id/toolbar_text"
@@ -26,19 +41,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:textSize="19sp"
                     android:textColor="@android:color/black"
-                    android:text="Getting Things Done"
+                    android:text="@string/app_name"
             />
-
-            <ImageView
-                    android:id="@+id/ic_data_range"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:padding="12dp"
-                    android:src="@drawable/ic_date_range"
-                    android:visibility="invisible"
-                    app:layout_constraintEnd_toEndOf="parent"
-            />
-
             <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -54,7 +58,8 @@
             android:id="@+id/recycler_view"
             android:layout_marginTop="48dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_create_note"
@@ -101,6 +106,20 @@
             app:fabSize="normal"
             android:elevation="6dp"
             app:pressedTranslationZ="12dp"
+    />
+
+    <TextView
+            android:id="@+id/empty_recycler_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/create_a_note_or_folder"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
     />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
