--- a/GettingThingsDone/app/src/main/res/layout/note_fragment.xml
+++ b/GettingThingsDone/app/src/main/res/layout/note_fragment.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/constraint_for_click"
+        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/constraint_for_click"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 >
@@ -11,7 +11,10 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            app:contentInsetStart="0dp">
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -22,7 +25,11 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:padding="12dp"
-                    android:src="@drawable/ic_arrow_back_black"/>
+                    android:src="@drawable/ic_arrow_back_black"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:contentDescription="@string/back_button"/>
 
             <TextView
                     android:id="@+id/note_text"
@@ -30,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="19sp"
                     android:textColor="@android:color/black"
-                    android:text="Note"
+                    android:text="@string/note"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +52,9 @@
                     android:src="@drawable/ic_done_black"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="parent"
-            />
-
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/save_note_button"/>
             <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -63,14 +71,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="10000"
+
             android:textSize="17sp"
             android:textCursorDrawable="@null"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/transparent"
-            android:hint="Write a note"
+            android:hint="@string/write_a_note"
             android:layout_margin="12dp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
-    />
+            android:inputType="text"
+            android:digits="0,1,2,3,4,5,6,7,8,9,qwertzuiopasdfghjklyxcvbnm,йцукенгшщзхъфывапролджэячсмитьбю"
+            android:importantForAutofill="no"
+            tools:targetApi="o"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
