--- a/Fahrenheit/app/src/main/res/layout-land/activity_menu.xml
+++ b/Fahrenheit/app/src/main/res/layout-land/activity_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_menu"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,7 +13,7 @@
             android:id="@+id/start_game_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Начать игру"
+            android:text="@string/start_game"
             android:textColor="@android:color/white"
             android:padding="17dp"
             android:textSize="19sp"
@@ -26,7 +27,7 @@
             android:id="@+id/progress_game_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Прогресс"
+            android:text="@string/progress"
             android:textColor="@android:color/white"
             android:padding="17dp"
             android:textSize="19sp"
@@ -41,7 +42,7 @@
             android:id="@+id/settings_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Настройки"
+            android:text="@string/setting"
             android:textColor="@android:color/white"
             android:padding="17dp"
             android:textSize="19sp"
