--- a/Fahrenheit/app/src/main/res/layout-land/custom_card_view.xml
+++ b/Fahrenheit/app/src/main/res/layout-land/custom_card_view.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent" android:layout_height="wrap_content">
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_custom_card_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/black"
@@ -19,19 +22,20 @@
                 android:padding="17dp"
                 android:textSize="17sp"
                 android:fontFamily="@font/my_font"
-                android:text="...сюжет..."
                 android:textColor="@android:color/white"
-        />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
-                android:maxWidth="250dp"
+                android:maxWidth="180dp"
                 android:singleLine="false"
                 android:id="@+id/answer_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="17dp"
                 android:textSize="17sp"
-                android:text="First"
+                android:text="@string/first"
                 android:fontFamily="@font/my_font"
                 android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@id/textLabel"
@@ -49,14 +53,14 @@
         />
 
         <TextView
-                android:maxWidth="250dp"
+                android:maxWidth="180dp"
                 android:singleLine="false"
                 android:id="@+id/answer_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="17dp"
                 android:textSize="17sp"
-                android:text="Second"
+                android:text="@string/second"
                 android:fontFamily="@font/my_font"
                 android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@+id/textLabel"
@@ -66,7 +70,7 @@
 
 
         <TextView
-                android:maxWidth="250dp"
+                android:maxWidth="180dp"
                 android:singleLine="false"
                 android:id="@+id/answer_3"
                 android:layout_width="wrap_content"
@@ -74,7 +78,7 @@
                 android:padding="17dp"
                 android:textSize="17sp"
                 android:layout_marginTop="8dp"
-                android:text="Third"
+                android:text="@string/third"
                 android:fontFamily="@font/my_font"
                 android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@id/answer_1"
