--- a/Fahrenheit/app/src/main/res/layout/activity_menu.xml
+++ b/Fahrenheit/app/src/main/res/layout/activity_menu.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_menu"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
         tools:context=".MenuActivity">
 
     <TextView
             android:id="@+id/start_game_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Начать игру"
+            android:text="@string/start_game"
             android:textColor="@android:color/white"
             android:padding="17dp"
             android:textSize="19sp"
@@ -26,7 +26,7 @@
             android:id="@+id/progress_game_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Прогресс"
+            android:text="@string/progress"
             android:textColor="@android:color/white"
             android:padding="17dp"
             android:textSize="19sp"
@@ -41,7 +41,7 @@
             android:id="@+id/settings_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Настройки"
+            android:text="@string/setting"
             android:textColor="@android:color/white"
             android:padding="17dp"
             android:textSize="19sp"
