--- a/Fahrenheit/app/src/main/res/layout/activity_progress.xml
+++ b/Fahrenheit/app/src/main/res/layout/activity_progress.xml
@@ -6,14 +6,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
         tools:context=".ProgressActivity">
 
     <TextView
             android:id="@+id/progress_count_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Концовок открыто 0/6"
+            android:text="@string/end_open_0_6"
             android:textColor="@android:color/white"
             android:padding="17dp"
             android:textSize="19sp"
