--- a/Fahrenheit/app/src/main/res/layout/custom_card_view.xml
+++ b/Fahrenheit/app/src/main/res/layout/custom_card_view.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent" android:layout_height="wrap_content">
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_custom_card_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/black"
@@ -19,9 +22,10 @@
                 android:padding="17dp"
                 android:textSize="17sp"
                 android:fontFamily="@font/my_font"
-                android:text="...сюжет..."
                 android:textColor="@android:color/white"
-        />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
                 android:maxWidth="180dp"
@@ -31,7 +35,6 @@
                 android:layout_height="wrap_content"
                 android:padding="17dp"
                 android:textSize="17sp"
-                android:text="First"
                 android:fontFamily="@font/my_font"
                 android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@id/textLabel"
@@ -56,7 +59,6 @@
                 android:layout_height="wrap_content"
                 android:padding="17dp"
                 android:textSize="17sp"
-                android:text="Second"
                 android:fontFamily="@font/my_font"
                 android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@+id/textLabel"
@@ -74,7 +76,6 @@
                 android:padding="17dp"
                 android:textSize="17sp"
                 android:layout_marginTop="8dp"
-                android:text="Third"
                 android:fontFamily="@font/my_font"
                 android:textColor="@android:color/white"
                 app:layout_constraintTop_toBottomOf="@id/answer_1"
