--- a/app/src/main/res/layout-land/match_list_item.xml
+++ b/app/src/main/res/layout-land/match_list_item.xml
@@ -7,6 +7,7 @@
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
+                android:background="@android:color/transparent"
                 android:src="@drawable/match"
                 android:id="@+id/match_image_button"/>
 
